Add profile photo to header in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <header class="hero">
+    <img src="assets/images/moataz.jpg" alt="Moataz Gobara" class="profile-photo">
     <h1>Moataz Gobara</h1>
     <p class="subtitle">MEAL & Data Analytics Professional</p>
     <p class="intro">
