--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
 
 <header class="hero">
-    <img src="assets/images/moataz.jpg" alt="Moataz Gobara" class="profile-photo">
-    <h1>Moataz Gobara</h1>
-    <p class="subtitle">MEAL & Data Analytics Professional</p>
-    <p class="intro">
-        Monitoring, Evaluation, Accountability and Learning (MEAL) specialist with
-        strong experience in humanitarian data analysis, Power BI dashboards,
-        Python automation, Excel, and GIS mapping.
+     <img src="assets/images/moataz.jpg" alt="Moataz Gobara" class="profile-photo">
+    <div class="hero-text">
+        <h1>Moataz Gobara</h1>
+        <p class="subtitle">MEAL & Data Analytics Professional</p>
+        <p class="intro">
+            Monitoring, Evaluation, Accountability and Learning (MEAL) specialist with
+            strong experience in humanitarian data analysis, Power BI dashboards,
+            Python automation, Excel, and GIS mapping.
     </p>
 </header>
 
