--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="hero">
-     <img src="assets/images/moataz.jpg" alt="Moataz Gobara" class="profile-photo">
+    <img src="assets/images/IMG_20241227_192052.jpg" alt="Moataz Gobara" class="profile-photo">
     <div class="hero-text">
         <h1>Moataz Gobara</h1>
         <p class="subtitle">MEAL & Data Analytics Professional</p>
@@ -17,8 +17,10 @@
             Monitoring, Evaluation, Accountability and Learning (MEAL) specialist with
             strong experience in humanitarian data analysis, Power BI dashboards,
             Python automation, Excel, and GIS mapping.
-    </p>
+        </p>
+    </div>
 </header>
+
 
 <section id="projects">
     <h2>Selected Projects</h2>
