--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 <section id="skills">
     <h2>Core Skills</h2>
     <ul class="skills-list">
-        <li>MEAL Systems & Frameworks</li>
+        <li>MEAL systems & frameworks</li>
         <li>Baseline, Endline, PDM & Needs Assessments</li>
-        <li>Power BI & Data Visualization</li>
-        <li>Python (Pandas, Automation)</li>
-        <li>Advanced Excel</li>
-        <li>QGIS & Spatial Analysis</li>
-        <li>Data Quality Assurance</li>
+        <li>Power BI & data Visualization</li>
+        <li>Python (Excel automation with Pandas, Openpyxl)</li>
+        <li>Advanced excel</li>
+        <li>QGIS for mapping</li>
+        <li>Data quality assurance</li>
     </ul>
 </section>
 
@@ -94,7 +94,7 @@
     <h2>Contact</h2>
     <p class="contact-links">
         <a href="https://github.com/moataz-gobara" target="_blank">GitHub</a> |
-        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/moataz-m-gobara" target="_blank">LinkedIn</a>
     </p>
 </section>
 
