--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="project-card">
         <h3>QGIS Maps for Humanitarian Assessment Studies</h3>
         <p>
-            Thematic maps produced using QGIS to support humanitarian assessment
+            Spatial distribution maps produced using QGIS to support humanitarian assessment
             reporting. The maps illustrate geographic coverage and spatial patterns.
             Sensitive elements were intentionally obscured for confidentiality.
         </p>
