--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,9 +19,8 @@
             strong experience in humanitarian data analysis, Power BI dashboards,
             Python automation, Excel, and GIS mapping.
         </p>
-    </div>
+ </div>
 </header>
-
 
 <section id="projects">
     <h2>Selected Projects</h2>
@@ -63,8 +63,17 @@
             View Project on GitHub
         </a>
     </div>
-
 </section>
+
+<!-- ⭐ INSERTED DASHBOARD SECTION HERE -->
+<section id="dashboard">
+    <h2>Interactive Nutrition Dashboard</h2>
+
+dashboards/nutrition_dashboard.html"
+            style="width: 100%; height: 900px; border: none; margin-top: 20px;">
+    </iframe>
+</section>
+<!-- ⭐ END OF INSERTION -->
 
 <section id="skills">
     <h2>Core Skills</h2>
