--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
             strong experience in humanitarian data analysis, Power BI dashboards,
             Python automation, Excel, and GIS mapping.
         </p>
- </div>
+    </div>
 </header>
+
+<!-- ===== Dashboard section inserted RIGHT UNDER the header ===== -->
+<section id="dashboard">
+    <h2>Interactive Nutrition Dashboard</h2>
+
+    <iframe
+        src="https://moataz-gobara.github.io/dashboards/nutrition_dashboard.html"
+        style="width: 100%; height: 900px; border: none; margin-top: 12px;"
+        title="Under-5 Malnutrition Dashboard">
+    </iframe>
+</section>
+<!-- ===== End dashboard section ===== -->
 
 <section id="projects">
     <h2>Selected Projects</h2>
@@ -63,17 +75,8 @@
             View Project on GitHub
         </a>
     </div>
-</section>
 
-<!-- ⭐ INSERTED DASHBOARD SECTION HERE -->
-<section id="dashboard">
-    <h2>Interactive Nutrition Dashboard</h2>
-
-dashboards/nutrition_dashboard.html"
-            style="width: 100%; height: 900px; border: none; margin-top: 20px;">
-    </iframe>
 </section>
-<!-- ⭐ END OF INSERTION -->
 
 <section id="skills">
     <h2>Core Skills</h2>
