--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
     </div>
 </header>
 
-<!-- ===== Dashboard section inserted RIGHT UNDER the header ===== -->
-<section id="dashboard">
+<!-- ===== Dashboard section directly under header ===== -->
+<section id="dashboard" style="margin-top: 10px; margin-bottom: 30px;">
     <h2>Interactive Nutrition Dashboard</h2>
-
-    <iframe
-        src="https://moataz-gobara.github.io/dashboards/nutrition_dashboard.html"
-        style="width: 100%; height: 900px; border: none; margin-top: 12px;"
-        title="Under-5 Malnutrition Dashboard">
+    dashboards/nutrition_dashboard.html"
+            style="width: 100%; height: 900px; border: none; margin-top: 12px;">
     </iframe>
 </section>
 <!-- ===== End dashboard section ===== -->
