--- a/index.html
+++ b/index.html
@@ -58,19 +58,17 @@
 <section id="projects">
     <h2>Selected Projects</h2>
 
-    <!-- 1) Interactive Nutrition Dashboard as a project card (first item) -->
     <div class="project-card dashboard-card">
         <h3>Interactive Nutrition Dashboard (Sudan U5: SAM &amp; MAM)</h3>
         <p>
-            A fully interactive Plotly dashboard with dynamic state filtering and locality drilldown,
-            rendered with stacked bars and responsive scaling for portfolio embedding.
+            A fully interactive dashboard with dynamic state filtering and locality drilldown,
             Built in Python (Pandas + Plotly).
         </p>
 
         <!-- Keep the dashboard interactive by embedding via iframe -->
         <iframe
           src="https://moataz-gobara.github.io/dashboards/nutrition_dashboard.html"
-          title="Interactive Nutrition Dashboard"
+          title="Interactive Nutrition (SAM/MAM) Dashboard."
           loading="lazy"
           style="width: 100%; height: 900px; border: none;">
         </iframe>
